--- a/index.html
+++ b/index.html
@@ -25,21 +25,31 @@
     </header>
 
     <main>
+        <!-- First section -->
         <section>
             <div>
                 <h1>Your puRRRfect educator</h1>
                 <div>
-                    <img src="" alt="">
+                    <img src="./images/cat_section.png" alt="cat">
                     <p>Let’s study, watch cool content and just have some fun together</p>
                 </div>
                 <ul>
-                    <li><button></button></li>
-                    <li><button></button></li>
+                    <li>
+                        <button>
+                            Subscribe
+                        </button>
+                    </li>
+                    <li>
+                        <button>
+                            <img src="f" alt="icon play video">
+                            <p>Watch intro</p>
+                        </button>
+                    </li>
                 </ul>
             </div>
-
-
-            <div></div>
+            <div>
+                <img src="./images/big_cat.png" alt="big cat">
+            </div>
         </section>
     </main>
 
