--- a/index.html
+++ b/index.html
@@ -51,6 +51,35 @@
                 <img src="./images/big_cat.png" alt="big cat">
             </div>
         </section>
+
+        <!-- Second section -->
+        <section>
+            <ul>
+                <li>
+                    <h2>Students</h2>
+                    <img src="" alt="">
+                    <p>8500+</p>
+                </li>
+                <li>
+                    <h2>Lessons</h2>
+                    <img src="" alt="">
+                    <p>200+</p>
+                </li>
+                <li>
+                    <h2>Likes</h2>
+                    <img src="" alt="">
+                    <p>99k+</p>
+                </li>
+            </ul>
+
+            <div>
+                <img src="./images/tymur.png" alt="machoman">
+                <div>
+                    <h2>John Doe</h2>
+                    <p>It was really cool experience, I love it so much!</p>
+                </div>
+            </div>
+        </section>
     </main>
 
 
