--- a/index.html
+++ b/index.html
@@ -80,6 +80,54 @@
                 </div>
             </div>
         </section>
+
+        <!-- Third section -->
+        <section>
+            <div>
+                <h3>Explore all opportunities of Catademy</h3>
+                <p>You can find here tons of useful information and interesting, fun content. All in one place. Let’s
+                    go!</p>
+            </div>
+            <ul>
+                <li>
+                    <a href="">
+                        <div>
+                            <img src="./images/first_cat.png" alt="cats">
+                        </div>
+                        <div>
+                            <h4>Group lessons</h4>
+                            <p>Make new friends, join teams and learn in a fun and productive way. We are waiting for
+                                you!
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div>
+                            <img src="./images/second_cat.png" alt="cats">
+                        </div>
+                        <div>
+                            <h4>Videos</h4>
+                            <p>Search among more than 500 videos and you will definitely find something interesting for
+                                you.
+                            </p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <div>
+                            <img src="./images/third_cat.png" alt="cats">
+                        </div>
+                        <div>
+                            <h4>Quizzes</h4>
+                            <p>Test your knowledge in various tests and quizzes personally selected for you</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
 
 
