fifth form section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <!-- First section -->
+        <!-- Start section -->
         <section>
             <div>
                 <h1>Your puRRRfect educator</h1>
@@ -35,12 +35,12 @@
                 </div>
                 <ul>
                     <li>
-                        <button>
+                        <button type="button">
                             Subscribe
                         </button>
                     </li>
                     <li>
-                        <button>
+                        <button type="button">
                             <img src="f" alt="icon play video">
                             <p>Watch intro</p>
                         </button>
@@ -52,7 +52,7 @@
             </div>
         </section>
 
-        <!-- Second section -->
+        <!-- Info section -->
         <section>
             <ul>
                 <li>
@@ -81,7 +81,7 @@
             </div>
         </section>
 
-        <!-- Third section -->
+        <!-- Benefits section -->
         <section>
             <div>
                 <h3>Explore all opportunities of Catademy</h3>
@@ -127,6 +127,39 @@
                     </a>
                 </li>
             </ul>
+        </section>
+
+        <!-- Picture section -->
+        <section>
+            <div>
+                <h3>Enjoy Our Gallery</h3>
+                <p>Do not be shy to review and like the photos</p>
+            </div>
+            <ul>
+                <li><img src="./images/Rectangle 20.png" alt="clever cat"></li>
+                <li><img src="./images/Rectangle 20-1.png" alt="clever cat"></li>
+                <li><img src="./images/Rectangle 24.png" alt="clever cat"></li>
+                <li><img src="./images/Rectangle 24-1.png" alt="clever cat"></li>
+                <li><img src="./images/Rectangle 25.png" alt="clever cat"></li>
+                <li><img src="./images/Rectangle 25-1.png" alt="clever cat"></li>
+            </ul>
+        </section>
+
+        <!-- Form section -->
+        <section>
+            <div>
+                <h3>You are in great paws!</h3>
+                <p>Subscribe to get more information about upcoming courses and new videos. You will also get an
+                    opportunity to share with other users your unique knowledge by writing articles and posting video
+                    lessons!</p>
+            </div>
+            <form>
+                <input type="text" placeholder="Your email address">
+                <button type="submit">Subscribe</button>
+            </form>
+            <div>
+                <img src="./images/image 17.png" alt="robot cat">
+            </div>
         </section>
     </main>
 
