--- a/index.html
+++ b/index.html
@@ -164,7 +164,19 @@
     </main>
 
 
-    <footer></footer>
+    <footer>
+        <ul>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+            <li><a href=""><img src="" alt=""></a></li>
+        </ul>
+        <ul>
+            <li><a href="">Contacts</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Privacy policy</a></li>
+            <li><a href="">Terms & Conditions</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
